app/assets/stylesheets/scroller.scss
@mixin mouse-scroll-hover {
  rect {
    transform: translateY(-1.5px);
    stroke: rgb(254, 254, 254);
  }
}

#mouse-scroll {
  cursor: pointer;
  position: absolute;
  left: 50%;
  top: 55vh;
  transform: translateX(-50%);
  z-index: 9999;
  font-size: 1.5em;

  &:active {
    @include mouse-scroll-hover();
  }
  @media (min-width: 768px) {
    font-size: 1.8em;
    left: 50%;
    top: 70vh;
    &:hover {
      @include mouse-scroll-hover();
    }
  }
  @media (min-width: 1200px) {
    top: 75vh;
  }
}

